# execute-module

./: .gitignore  CMakeLists.txt  README.md  README.rst  config.h.in  modules.json.in
proto/: execute.proto
src/: cmdexecute.cpp  execute_module.cpp
src/include/: cmdexecute.hpp  execute_module.hpp
tests/: CMakeLists.txt  test_cmdexecute.cpp
